# SunriseOS

./: .gitignore  .gitmodules  .travis.yml  Cargo.toml  Makefile.toml  README.md  Xargo.toml  aarch64-unknown-sunrise-user.json  build.rs  i386-unknown-none-user.json  i386-unknown-none.json  i386-unknown-sunrise-user.json  link.T  rust-toolchain  update_subtree  x86_64-unknown-none.json
.github/: config.yml  mergeable.yml
.github/workflows/: rust.yml
.travis/: deploy.sh  github_deploy_key.enc
ahci/: Cargo.toml
ahci/src/: disk.rs  fis.rs  hba.rs  main.rs  pci.rs
bootstrap/: Cargo.toml  Makefile.toml  rust-toolchain
bootstrap/src/: address.rs  bootstrap_logging.rs  bootstrap_stack.rs  elf_loader.rs  frame_alloc.rs  main.rs  utils.rs
bootstrap/src/gdt/: i386.rs  mod.rs  segment_selector.rs
bootstrap/src/paging/: entry.rs  mod.rs  table.rs
clock/: Cargo.toml
clock/src/: logger.rs  main.rs  vbe.rs
coreutils/: Cargo.toml  build.rs
df/: Cargo.toml
df/src/: main.rs
disk-initializer/: Cargo.toml
disk-initializer/src/: gpt.rs  main.rs
docs/: BUILDING.md  Cargo.toml  README.md  SECURITY_ARCHITECTURE.md  UPDATE_RUST.md
docs/src/: main.rs
fs/: Cargo.toml
fs/src/: main.rs
fs/src/detail/: mod.rs  utils.rs
fs/src/detail/driver/: mod.rs
fs/src/detail/driver/fat/: directory.rs  error.rs  file.rs  filesystem.rs  mod.rs
fs/src/detail/gpt/: mod.rs
fs/src/interface/: driver.rs  filesystem.rs  mod.rs  storage.rs
fs/src/ipc/: mod.rs
gen-secureboot-keys/: Cargo.toml
gen-secureboot-keys/src/: main.rs
ipcdefs/: ahci.id  example.id  filesystem.id  keyboard.id  loader.id  sm.id  time.id  twili.id  vi.id
kernel/: Cargo.toml
kernel/res/: double_fault.txt  kernel_fault.txt
kernel/src/: checks.rs  cpu_locals.rs  elf_loader.rs  error.rs  event.rs  heap_allocator.rs  io.rs  ipc.rs  logger.rs  main.rs  mem.rs  panic.rs  process.rs  scheduler.rs  sync.rs  syscalls.rs  timer.rs  utils.rs
kernel/src/arch/: mod.rs
kernel/src/arch/i386/: gdt.rs  mod.rs  multiboot.rs  process_switch.rs  registers.rs  stack.rs
kernel/src/arch/i386/interrupts/: irq.rs  mod.rs
kernel/src/arch/i386/structures/: gdt.rs  idt.rs
kernel/src/arch/stub/: mod.rs
kernel/src/devices/: apic.rs  hpet.rs  ioapic.rs  lapic.rs  mod.rs  pic.rs  pit.rs  ps2.rs  rs232.rs  vbe.rs  vgatext.rs
kernel/src/frame_allocator/: i386.rs  mod.rs  physical_mem_region.rs
kernel/src/gdt/: mod.rs
kernel/src/i386/: acpi.rs  gdt.rs  interrupt.rs  interrupt_service_routines.rs  mod.rs  multiboot.rs  pio.rs  process_switch.rs  registers.rs  stack.rs
kernel/src/i386/mem/: frame_alloc.rs
kernel/src/i386/mem/paging/: entry.rs  mod.rs  table.rs
kernel/src/i386/structures/: gdt.rs  idt.rs
kernel/src/interrupts/: irq.rs  mod.rs  syscalls.rs
kernel/src/ipc/: mod.rs  port.rs  session.rs
kernel/src/log_impl/: mod.rs
kernel/src/log_impl/filter/: mod.rs  string.rs
kernel/src/paging/: bookkeeping.rs  cross_process.rs  error.rs  hierarchical_table.rs  kernel_memory.rs  lands.rs  mapping.rs  mod.rs  process_memory.rs
kernel/src/paging/arch/: mod.rs
kernel/src/paging/arch/i386/: entry.rs  lands.rs  mod.rs  table.rs
kernel/src/process/: capabilities.rs  thread_local_storage.rs
kernel/src/sync/: mod.rs  mutex.rs  spin_lock.rs  spin_lock_irq.rs
keyboard/: Cargo.toml
keyboard/src/: main.rs  ps2.rs
libkern/: Cargo.toml
libkern/src/: error.rs  lib.rs  process.rs
libtimezone/: Cargo.toml
libtimezone/src/: conversion.rs  lib.rs  utils.rs
libuser/: Cargo.toml  build.rs
libuser/src/: ahci.rs  allocator.rs  argv.rs  caps.rs  error.rs  futures.rs  io.rs  lib.rs  log_impl.rs  mem.rs  pci.rs  ps2.rs  sm.rs  syscalls.rs  terminal.rs  thread_local_storage.rs  threads.rs  types.rs  utils.rs  vi.rs  window.rs  zero_box.rs
libuser/src/crt0/: mod.rs  relocation.rs
libuser/src/ipc/: buffer.rs  macros.rs  mod.rs  server.rs
libuser/src/pci/: capabilities.rs
libutils/: Cargo.toml
libutils/src/: cursor.rs  io.rs  lib.rs  loop_future.rs
libutils/src/io/: mmio.rs  mod.rs  pio.rs
linker-scripts/: bootstrap.ld  kernel.ld  userspace.ld
loader/: Cargo.toml
loader/src/: elf_loader.rs  main.rs
master/: index.html  rustdoc.css  search-index.js  settings.html  source-files.js
master/disk_initializer/: all.html  constant.BLOCK_SIZE.html  constant.BLOCK_SIZE_U64.html  fn.main.html  fn.write_file_to_filesystem.html  fn.write_tempate_to_filesystem.html  index.html  sidebar-items.js
master/docs/: all.html  fn.main.html  index.html  sidebar-items.js
master/sunrise_ahci/: all.html  fn.main.html  index.html  sidebar-items.js  (+4 more)
rust/: .gitmodules  Cargo.toml
rust-patches/: 0001-Add-sunrise.patch  0001-Create-workspace-remove-unneeded-deps-in-lockfile.patch  0001-make-Condvar-Mutex-RwLock-const-constructors-work-wi.patch  0002-Add-sunrise.patch  0002-Assume-core-compiler_builtins-alloc-are-in-sysroot-w.patch  0003-Build-compiler-builtins-with-soft-float-feature.patch  0004-Fix-compilation-of-std-crate-with-alloc-from-sysroot.patch  0005-Add-workspace-to-allow-xargo-to-work.patch  0006-Redox-style-path-API.patch  0007-Add-sunrise.patch
scripts/: README.md
shell/: Cargo.toml
shell/src/: io.rs  main.rs  ps2.rs  subcommands.rs  syscalls.rs  vbe.rs
shell/src/subcommands/: cd.rs  connect.rs  exit.rs  help.rs  kill.rs  ps.rs  pwd.rs  showgif.rs  test_divide_by_zero.rs  test_page_fault.rs  test_threads.rs  useradd.rs
sm/: Cargo.toml
sm/src/: main.rs
src/: event.rs  frame_alloc.rs  heap_allocator.rs  logger.rs  main.rs  print.rs  utils.rs
std_hello_world/: Cargo.toml
std_hello_world/src/: main.rs
swipc-gen/: Cargo.toml
swipc-gen/src/: gen_rust_code.rs  itemmod.rs  lib.rs  main.rs
swipc-parser/: Cargo.toml
time/: Cargo.toml  build.rs
time/build-script/: Cargo.toml
time/build-script/src/: main.rs
time/src/: main.rs  timezone.rs
twili/: Cargo.toml
twili/src/: main.rs
vi/: Cargo.toml
vi/src/: main.rs  terminal.rs  vbe.rs
virtio/: Cargo.toml
virtio/src/: main.rs  net.rs  pci.rs  ping.rs  virtqueue.rs
wall-clock/: Cargo.toml
wall-clock/src/: main.rs
(+2261 files in other folders)
