[workspace]
members = ["kernel", "bootstrap", "shell", "time", "libuser", "wall-clock", "sm", "vi", "ahci", "fs", "libutils", "libkern", "swipc-gen", "swipc-parser", "docs", "libtimezone", "disk-initializer", "loader", "keyboard", "std_hello_world"]

[profile.release]
debug = true

[profile.test]
debug = true
