[package]
name = "sunrise-ahci"
version = "0.1.0"
authors = ["orycterope <tvermeilh@gmail.com>", "roblabla <unfiltered@roblab.la>"]
license = "Apache-2.0 OR MIT"
edition = "2018"

[dependencies]
sunrise-libuser = { path = "../libuser" }
sunrise-libutils = { path = "../libutils" }
spin = "0.4"
log = "0.4.7"
bitfield = "0.13.1"

[dependencies.lazy_static]
features = ["spin_no_std"]
version = "1.3.0"

[dependencies.static_assertions]
version  = "0.3.3"
features = ["nightly"]
