[package]
authors = ["roblabla <unfiltered@roblab.la>", "orycterope <tvermeilh@gmail.com>"]
name = "bootstrap"
version = "0.1.0"

[package.metadata.cargo-xbuild]
memcpy = true
sysroot_path = "target/sysroot"
[dependencies]
bit_field = "0.9.0"
bitflags = "1.0"
multiboot2 = { git = "https://github.com/roblabla/multiboot2-elf64" }
spin = "0.4.6"
static_assertions = "*"

[dependencies.arrayvec]
default-features = false
version = "0.4.7"

[dependencies.byteorder]
default-features = false
version = "1.2.1"

[dependencies.lazy_static]
features = ["spin_no_std"]
version = "1.0.0"
