[package]
authors = ["roblabla <unfiltered@roblab.la>", "orycterope <tvermeilh@gmail.com>"]
name = "kfs-bootstrap"
version = "0.1.0"

[package.metadata.cargo-xbuild]
memcpy = true
sysroot_path = "target/sysroot"

[dependencies]
kfs-libutils = { path = "../libutils" }
bit_field = "0.9.0"
bitflags = "1.0"
multiboot2 = { git = "https://github.com/roblabla/multiboot2-elf64" }
spin = "0.4.6"
static_assertions = "*"
xmas-elf = "0.6.2"

[dependencies.smallvec]
default-features = false
version = "0.6.2"

[dependencies.arrayvec]
default-features = false
version = "0.4.7"

[dependencies.lazy_static]
features = ["spin_no_std"]
version = "1.0.0"
