[package]
authors = ["roblabla <unfiltered@roblab.la>", "orycterope <tvermeilh@gmail.com>"]
name = "sunrise-bootstrap"
version = "0.1.0"
license = "Apache-2.0 OR MIT"
edition = "2018"

[package.metadata.cargo-xbuild]
memcpy = true
sysroot_path = "target/sysroot"

[dependencies]
sunrise-libutils = { path = "../libutils" }
bit_field = "0.10.0"
bitflags = "1.1"
multiboot2 = { git = "https://github.com/sunriseos/multiboot2-elf64.git" }
spin = "0.5.0"
xmas-elf = "0.6.2"

[dependencies.smallvec]
default-features = false
version = "0.6.10"

[dependencies.arrayvec]
default-features = false
version = "0.4.10"

[dependencies.lazy_static]
features = ["spin_no_std"]
version = "1.3.0"

[dependencies.static_assertions]
version  = "0.3.3"
features = ["nightly"]
