[package]
name = "disk-initializer"
version = "0.1.0"
authors = ["Thomas Guillemard <me@thog.eu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.6"
storage_device = { git = "https://github.com/Sunriseos/storage_device.git", default-features = false, features = ["std", "cached-block-device-nightly"] }
libfat = { git = "https://github.com/Thog/libfat.git", branch = "initial" }
uuid = "0.7"
plain = "0.2"

[dependencies.static_assertions]
version  = "0.3.1"
features = ["nightly"]

[dependencies.crc]
version = "1.8"
default-features = false

[dependencies.byteorder]
default-features = false
version = "1.3.2"