[package]
name = "sunrise-fs"
version = "0.1.0"
authors = ["Thog <contact@thog.eu>", "orycterope <tvermeilh@gmail.com>"]
license = "Apache-2.0 OR MIT"
edition = "2018"

[dependencies]
bitflags = "1.0"
sunrise-libuser = { path = "../libuser" }
sunrise-libutils = { path = "../libutils" }
spin = "0.4"
log = "0.4.6"
storage_device = { git = "https://github.com/sunriseos/storage_device.git", default-features = false, features = ["cached-block-device-nightly", "alloc"] }
libfat = { git = "https://github.com/sunriseos/libfat.git" }
plain = "0.2"
arrayvec = {version = "0.4", default-features = false}

[dependencies.lazy_static]
features = ["spin_no_std"]
version = "1.3.0"

[dependencies.static_assertions]
version  = "0.3.1"
features = ["nightly"]

[dependencies.uuid]
version = "0.7"
default-features = false

[dependencies.crc]
version = "1.8"
default-features = false

[dependencies.byteorder]
default-features = false
version = "1.3.1"

[dependencies.hashbrown]
features = ["nightly"]
version = "0.6.2"
