[package]
name = "gen-secureboot-keys"
version = "0.1.0"
authors = ["roblabla <unfiltered@roblab.la>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.1.4"
serde = "1.0"
serde_derive = "1.0"
chrono = "0.4"
bitflags = "1.0"