[package]
authors = ["roblabla <unfiltered@roblab.la>", "orycterope <tvermeilh@gmail.com>"]
name = "kfs-kernel"
version = "0.1.0"

[package.metadata.cargo-xbuild]
memcpy = true
sysroot_path = "target/sysroot"


[features]
#Will make the kernel panic if an exception is encountered. Useful for debugging.
panic-on-exception = []

[dependencies]
kfs-libutils = { path = "../libutils" }
kfs-libkern = { path = "../libkern" }
bit_field = "0.9.0"
bitflags = "1.0"
multiboot2 = { git = "https://github.com/roblabla/multiboot2-elf64" }
spin = "0.4"
static_assertions = "*"
linked_list_allocator = "0.6.2"
log = "0.4.2"
xmas-elf = "0.6.2"
hashmap_core = "0.1.9"
rustc-demangle = "0.1"
failure = { version = "0.1", default-features = false, features = ["derive"] }
bitfield = "0.13"
mashup = "0.1.9"

[dependencies.smallvec]
default-features = false
version = "0.6.7"

[dependencies.byteorder]
default-features = false
version = "1.2.1"

[dependencies.lazy_static]
features = ["spin_no_std"]
version = "1.0.0"
