[package]
authors = ["roblabla <unfiltered@roblab.la>", "orycterope <tvermeilh@gmail.com>"]
name = "kfs-kernel"
version = "0.1.0"
license = "Apache-2.0 OR MIT"
edition = "2018"

[package.metadata.cargo-xbuild]
memcpy = true
sysroot_path = "target/sysroot"


[features]
#Will make the kernel panic if an exception is encountered. Useful for debugging.
panic-on-exception = []
#Make the kernel allow all syscalls and IRQ, but log unauthorized accesses.
#IOPorts are unaffected.
no-security-check = []

[dependencies]
kfs-libutils = { path = "../libutils" }
kfs-libkern = { path = "../libkern" }
bit_field = "0.9.0"
bitflags = "1.0"
multiboot2 = { git = "https://github.com/roblabla/multiboot2-elf64" }
spin = "0.5"
static_assertions = "0.3.1"
linked_list_allocator = "0.6.2"
log = "0.4.6"
xmas-elf = "0.6.2"
rustc-demangle = "0.1"
failure = { version = "0.1", default-features = false, features = ["derive"] }
bitfield = "0.13"
mashup = "0.1.9"

[dependencies.smallvec]
default-features = false
version = "0.6.9"

[dependencies.byteorder]
default-features = false
version = "1.3.1"

[dependencies.hashbrown]
features = ["nightly"]
version = "0.1.8"

[dependencies.lazy_static]
features = ["spin_no_std"]
version = "1.3.0"
