[package]
authors = ["roblabla <unfiltered@roblab.la>", "orycterope <tvermeilh@gmail.com>"]
name = "sunrise-kernel"
version = "0.1.0"
license = "Apache-2.0 OR MIT"
edition = "2018"

[features]
#Will make the kernel panic if an exception is encountered. Useful for debugging.
panic-on-exception = []
#Make the kernel allow all syscalls and IRQ, but log unauthorized accesses.
#IOPorts are unaffected.
no-security-check = []

[dependencies]
sunrise-libutils = { path = "../libutils" }
sunrise-libkern = { path = "../libkern" }
bit_field = "0.10.0"
bitflags = "1.1"
multiboot2 = { git = "https://github.com/sunriseos/multiboot2-elf64.git" }
spin = "0.5"
linked_list_allocator = "0.6.4"
log = "0.4.6"
xmas-elf = "0.7.0"
rustc-demangle = "0.1"
failure = { version = "0.1", default-features = false, features = ["derive"] }
bitfield = "0.13"
mashup = "0.1.9"
tinybmp = "0.1.0"
acpi = { git = "https://github.com/sunriseos/acpi.git" }
plain = "0.2.3"
atomic = "0.4.5"

[dependencies.smallvec]
default-features = false
version = "0.6.10"

[dependencies.hashbrown]
features = ["nightly"]
version = "0.6.2"

[dependencies.lazy_static]
features = ["spin_no_std"]
version = "1.3.0"

[dependencies.static_assertions]
version  = "0.3.3"
features = ["nightly"]
