[package]
name = "sunrise-keyboard"
version = "0.1.0"
authors = ["Thog <contact@thog.eu>"]
license = "Apache-2.0 OR MIT"
edition = "2018"


[dependencies]
generic-array = "0.13.0"
spin = "0.5"
log = "0.4.6"
sunrise-libuser = { path = "../libuser" }
sunrise-libutils = { path = "../libutils" }
core = { package = "core-futures-tls", version = "0.1" }
lazy_static = "1.3"
