[package]
name = "sunrise-keyboard"
version = "0.1.0"
authors = ["Thog <contact@thog.eu>"]
license = "Apache-2.0 OR MIT"
edition = "2018"


[dependencies]
generic-array = "0.13.0"
arrayvec = {version = "0.4", default-features = false}
spin = "0.6"
log = "0.4.6"
sunrise-libuser = { path = "../libuser" }
sunrise-libutils = { path = "../libutils" }
lazy_static = "1.3"
