[package]
name = "sunrise-libkern"
version = "0.1.0"
authors = ["roblabla <unfiltered@roblab.la>"]
license = "Apache-2.0 OR MIT"
edition = "2018"

[dependencies]
sunrise-libutils = { path = "../libutils" }
bitflags = "1.1"
bitfield = "0.13"
plain = "0.2.3"

[dependencies.lazy_static]
features = ["spin_no_std"]
version = "1.3.0"

[dependencies.static_assertions]
version  = "1.1.0"
features = ["nightly"]

[features]
rustc-dep-of-std = []
default = []