[package]
name = "sunrise-libuser"
version = "0.1.0"
authors = ["roblabla <unfiltered@roblab.la>", "orycterope <tvermeilh@gmail.com>"]
license = "Apache-2.0 OR MIT"
edition = "2018"

[dependencies]
linked_list_allocator = "0.6.4"
bitfield = "0.13"
bit_field = "0.9"
spin = "0.5"
sunrise-libutils = { path = "../libutils" }
sunrise-libkern = { path = "../libkern" }
swipc-gen = { path = "../swipc-gen" }
failure = { version = "0.1", default-features = false, features = ["derive"] }
font-rs = { git = "https://github.com/orycterope/font-rs" }
log = "0.4"
lazy_static = "1.3"

[dependencies.byteorder]
default-features = false
version = "1.3.1"

[dependencies.arrayvec]
default-features = false
version = "0.4.10"

[dependencies.hashbrown]
features = ["nightly"]
version = "0.1.8"
