[package]
name = "sunrise-libuser"
version = "0.1.0"
authors = ["roblabla <unfiltered@roblab.la>", "orycterope <tvermeilh@gmail.com>"]
license = "Apache-2.0 OR MIT"
edition = "2018"

[dependencies]
linked_list_allocator = { git = "https://github.com/sunriseos/linked-list-allocator", default-features = false }
bitfield = "0.13"
bit_field = "0.10"
spin = "0.5"
sunrise-libutils = { path = "../libutils" }
sunrise-libkern = { path = "../libkern" }
failure = { version = "0.1", default-features = false }
font-rs = { git = "https://github.com/SunriseOS/font-rs" }
log = "0.4"
lazy_static = "1.3"
libm = "0.1"
futures-preview = { git = "https://github.com/sunriseos/futures-rs.git", branch = "sunrise", default-features = false }
generational-arena = { git = "https://github.com/sunriseos/generational-arena", branch = "sunrise", default-features = false }
core = { git = "https://github.com/sunriseos/core-futures-tls.git", branch = "std-compat", package = "core-futures-tls" }

# When built as part of libstd
compiler_builtins = { version = "0.1.16", optional = true }
alloc = { version = "1.0.0", optional = true, package = "rustc-std-workspace-alloc" }

[dependencies.byteorder]
default-features = false
version = "1.3.2"

[dependencies.arrayvec]
default-features = false
version = "0.4.10"

[dependencies.hashbrown]
default-features = false
version = "0.5.0"

[build-dependencies]
swipc-gen = { path = "../swipc-gen" }

[features]
default = ["hashbrown/nightly", "futures-preview/nightly", "futures-preview/alloc_feature"]
rustc-dep-of-std = ["core/rustc-dep-of-std", "compiler_builtins", "alloc", "hashbrown/rustc-dep-of-std", "linked_list_allocator/rustc-dep-of-std", "font-rs/rustc-dep-of-std", "futures-preview/rustc-dep-of-std", "generational-arena/rustc-dep-of-std"]
raw = []
