[package]
name = "sunrise-libuser"
version = "0.1.0"
authors = ["roblabla <unfiltered@roblab.la>", "orycterope <tvermeilh@gmail.com>"]
license = "Apache-2.0 OR MIT"
edition = "2018"

[dependencies]
linked_list_allocator = "0.6.4"
bitfield = "0.13"
bit_field = "0.10"
spin = "0.5"
sunrise-libutils = { path = "../libutils" }
sunrise-libkern = { path = "../libkern" }
failure = { version = "0.1", default-features = false }
log = "0.4"
lazy_static = "1.3"
futures-preview = { version = "=0.3.0-alpha.16", default-features = false, features = ["nightly", "alloc"] }
generational-arena = { version = "0.2", default-features = false }
core = { package = "core-futures-tls", version = "0.1" }

[dependencies.byteorder]
default-features = false
version = "1.3.2"

[dependencies.arrayvec]
default-features = false
version = "0.4.10"

[dependencies.hashbrown]
default-features = false
version = "0.6.2"
features = ["nightly"]

[build-dependencies]
swipc-gen = { path = "../swipc-gen" }

[features]
default = ["lang-items"]
lang-items = []
build-for-std-app = []
rustc-dep-of-std = ["sunrise-libkern/rustc-dep-of-std"]
raw = []
