[package]
name = "kfs-libutils"
version = "0.1.0"
authors = ["roblabla <unfiltered@roblab.la>", "orycterope <tvermeilh@gmail.com>"]

[dependencies]
bit_field = "0.9.0"

[dependencies.num-traits]
version = "0.2"
default-features = false

[dependencies.byteorder]
default-features = false
version = "1.2.1"
