[package]
name = "sunrise-libutils"
version = "0.1.0"
authors = ["roblabla <unfiltered@roblab.la>", "orycterope <tvermeilh@gmail.com>"]
license = "Apache-2.0 OR MIT"
edition = "2018"

[dependencies]
bit_field = "0.10.0"

[dependencies.num-traits]
version = "0.2"
default-features = false

[dependencies.byteorder]
default-features = false
version = "1.3.2"

[dev-dependencies]
futures-preview = { version = "0.3.0-alpha.18", default-features = false, features = ["nightly"] }