[package]
name = "sunrise-loader"
version = "0.1.0"
authors = ["roblabla <unfiltered@roblab.la>"]
edition = "2018"

[dependencies]
sunrise-libuser = { path = "../libuser" }
sunrise-libkern = { path = "../libkern" }
sunrise-libutils = { path = "../libutils" }
log = "0.4"
xmas-elf = "0.7.0"
futures-preview = { version = "0.3.0-alpha.16", default-features = false, features = ["nightly", "alloc"] }

[dependencies.lazy_static]
features = ["spin_no_std"]
version = "1.3.0"