[package]
name = "kfs-shell"
version = "0.1.0"
authors = ["roblabla <unfiltered@roblab.la>", "orycterope <tvermeilh@gmail.com>"]
license = "Apache-2.0 OR MIT"
edition = "2018"

[dependencies]
gif = { git = "https://github.com/roblabla/image-gif" }
log = "0.4.6"
kfs-libuser = { path = "../libuser" }
spin = "0.5"

[dependencies.byteorder]
default-features = false
version = "1.3.1"

[dependencies.lazy_static]
features = ["spin_no_std"]
version = "1.2.0"
