[package]
name = "sunrise-shell"
version = "0.1.0"
authors = ["roblabla <unfiltered@roblab.la>", "orycterope <tvermeilh@gmail.com>"]
license = "Apache-2.0 OR MIT"
edition = "2018"

[dependencies]
gif = { git = "https://github.com/SunriseOS/image-gif" }
log = "0.4.6"
sunrise-libuser = { path = "../libuser" }
sunrise-libkern = { path = "../libkern" }
spin = "0.5"
bstr = { version = "0.2", default-features = false }
sha1 = { version = "0.6.0", default-features = false }
hex = { git = "https://github.com/KokaKiwi/rust-hex", default-features = false }

[dependencies.lazy_static]
features = ["spin_no_std"]
version = "1.3.0"
