[package]
name = "std_hello_world"
version = "0.1.0"
authors = ["Thomas Guillemard <me@thog.eu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sunrise-libuser = { path = "../libuser", features = ["build-for-std-app"] }
