[package]
name = "std_hello_world"
version = "0.1.0"
authors = ["Thog <me@thog.eu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sunrise-libuser = { path = "../libuser", default-features = false, features = ["build-for-std-app"] }
