[package]
name = "swipc-gen"
version = "0.1.0"
authors = ["roblabla <unfiltered@roblab.la>"]
edition = "2018"
description = "Client code generator for SwIPC calls"

[lib]
proc-macro = true

[dependencies]
lazy_static = "1.3.0"
bit_field = "0.10.0"
swipc-parser = { path = "../swipc-parser" }
darling = "0.9.0"
syn = { version = "0.15.43", features = ["derive"] }
structopt = { version = "0.2", optional = true }
quote = "0.6"
proc-macro2 = "0.4"

[[bin]]
name = "swipc-gen"
required-features = ["binaries"]

[features]
binaries = ["structopt"]