[package]
name = "sunrise-twili"
version = "0.1.0"
authors = ["roblabla <unfiltered@roblab.la>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sunrise-libuser = { path = "../libuser" }
spin = "0.6"
log = "0.4"
lazy_static = { version = "1.3.0", features = ["spin_no_std"] }