[package]
name = "sunrise-vi"
version = "0.1.0"
authors = ["roblabla <unfiltered@roblab.la>"]
license = "Apache-2.0 OR MIT"
edition = "2018"

[dependencies]
sunrise-libuser = { path = "../libuser" }
sunrise-libutils = { path = "../libutils" }
spin = "0.5"

[dependencies.hashbrown]
features = ["nightly"]
version = "0.5.0"

[dependencies.lazy_static]
features = ["spin_no_std"]
version = "1.3.0"
