[package]
name = "sunrise-vi"
version = "0.1.0"
authors = ["roblabla <unfiltered@roblab.la>"]
license = "Apache-2.0 OR MIT"
edition = "2018"

[dependencies]
sunrise-libuser = { path = "../libuser" }
sunrise-libkern = { path = "../libkern" }
sunrise-libutils = { path = "../libutils" }
spin = "0.5"
futures-preview = { version = "0.3.0-alpha.16", default-features = false, features = ["nightly", "alloc"] }
font-rs = { git = "https://github.com/SunriseOS/font-rs", default-features = false }
log = "0.4"
bit_field = "0.10"
core = { package = "core-futures-tls", version = "0.1" }

[dependencies.hashbrown]
features = ["nightly"]
version = "0.7.1"

[dependencies.lazy_static]
features = ["spin_no_std"]
version = "1.3.0"
