[package]
name = "sunrise-wall-clock"
version = "0.1.0"
authors = ["roblabla <unfiltered@roblab.la>", "orycterope <tvermeilh@gmail.com>"]
license = "Apache-2.0 OR MIT"
edition = "2018"

[dependencies]
sunrise-libuser = { path = "../libuser" }
log = "0.4.6"
spin = "0.6"
bstr = { version = "0.2", default-features = false }
